--- a/docs/data/quiz.en.yaml
+++ b/docs/data/quiz.en.yaml
@@ -243,4 +243,4 @@ final_words: |
   - a list of primary colors and a brief summary of their meaning
   - articles on each color, with their characteristics, as well as - the effect of color on a person, quotes from the greats, and information on how to use the chosen color in a blog and who it suits
   - final words and parting words
-close_button: "Close"
+close_button: "Return to Home"
