--- a/docs/data/quiz.ru.yaml
+++ b/docs/data/quiz.ru.yaml
@@ -243,4 +243,4 @@ final_words: |
   - список основных цветов и краткую сводку с их значением
   - статьи по каждому цвету, с их характеристиками, а также - воздействие цвета на человека, цитаты великих,  и информацию о том, как использовать выбранный цвет в блоге и кому он подойдет
   - финальные слова и напутствие
-close_button: "Закрыть"
+close_button: "Вернуться на главную"
